--- a/dia1.html
+++ b/dia1.html
@@ -72,15 +72,40 @@
 		<li>Primer elemento de la lista</li>
 		<li>Primer elemento de la lista</li>
 	</ol>
+	
+	<dl>
+		<dt>Titulo del articulo</dt>
+		<dd> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </dd>
+		
+		<dt>Titulo del articulo</dt>
+		<dd> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </dd>
+		
+		<dt>Titulo del articulo</dt>
+		<dd> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </dd>
+	</dl>
 
-    <!-- ul>li*5>a{click}   -->
-	<ul>
-		<li><a href="">click</a></li>
-		<li><a href="">click</a></li>
-		<li><a href="">click</a></li>
-		<li><a href="">click</a></li>
-		<li><a href="">click</a></li>
-	</ul>
+	<div>
+		<h1>Titulo</h1>
+		<p>
+			Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, <span>nascetur ridiculus mus</span>. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.
+		</p>
+	</div>
+
 
 	<img src="http://placehold.it/300x300" alt="Esto es el Titulo" />
 
