Agrega la tarea dentro de clase de la semana 3

--- a/tarea_semana2.html
+++ b/tarea_semana2.html
@@ -8,6 +8,7 @@
 	</style>
 </head>
 <body>
+
 	<div class="container">
 
 		<div class="grid12">
@@ -90,10 +91,105 @@
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 			</p>
+			<h1>Noticia 2</h1>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+			<h1>Noticia 2</h1>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
 		</div>
 		<div class="grid4">
 			<img src="http://placehold.it/300x600/" alt="">
 		</div>
+
+		<div class="clear"></div>
+
+		<div class="grid4">
+			<img src="http://placehold.it/300x100/" alt="">
+		</div>
+		<div class="grid4">
+			<img src="http://placehold.it/300x100/" alt="">
+		</div>
+		<div class="grid4">
+			<img src="http://placehold.it/300x100/" alt="">
+		</div>
+
+		<div class="clear"></div>
+
+
+		<div class="grid8">
+			<h1>Titulo de la prueba de subcolumna</h1>
+			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.
+			</p>
+
+			<div class="subcolumna">
+				<div class="grid4">
+					<img src="http://placehold.it/300x200/" alt="">
+				</div>
+				<div class="grid4">
+					<img src="http://placehold.it/300x200/" alt="">
+				</div>
+			</div>
+
+		</div>
+		<div class="grid4">
+			<div class="prueba_menu">
+				<ul>
+					<li>
+						<a href="#">Texto menu</a>
+					</li>
+					<li>
+						<a href="#">Texto menu</a>
+					</li>
+					<li>
+						<a href="#">Texto menu</a>
+					</li>
+					<li>
+						<a href="#">Texto menu</a>
+					</li>
+					<li>
+						<a href="#">Texto menu</a>
+					</li>
+				</ul>
+				<h1>Hola</h1>
+				<h2>Hola</h2>
+				<h3>Hola</h3>
+				<h4>Hola</h4>
+				<h5>Hola</h5>
+				<h6>Hola</h6>
+			</div>
+		</div>
+
+
+		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	</div>
 </body>
 </html>
