--- a/dia4_menu.html
+++ b/dia4_menu.html
@@ -13,11 +13,34 @@
 	<div class="container">
 		<div id="main_menu" class="grid12">
 			<ul class="menu">
-				<li><a href="#"> Enlace menu </a></li>
-				<li><a href="#"> Enlace menu </a></li>
-				<li><a href="#"> Enlace menu </a></li>
-				<li><a href="#"> Enlace menu </a></li>
-				<li><a href="#"> Enlace menu </a></li>
+				<li>
+					<a href="#"> home </a>
+				</li>
+				<li>
+					<a href="#"> contacto </a>
+				</li>
+				<li> <!-- comienzo li productos -->
+					<a href="#"> productos </a>
+
+					<ul class="submenu">
+						<li>
+							<a href="#">producto 1</a>
+						</li>
+						<li>
+							<a href="#">producto 2</a>
+						</li>
+						<li>
+							<a href="#">producto 3</a>
+						</li>
+					</ul> <!-- .submenu -->
+
+				</li> <!-- Fin li Productos -->
+				<li>
+					<a href="#"> programas </a>
+				</li>
+				<li>
+					<a href="#"> sistema </a>
+				</li>
 			</ul>
 		</div>
 	</div>
