--- a/dia4_botones.html
+++ b/dia4_botones.html
@@ -25,7 +25,10 @@
 			</a>
 		</div>
 		<div class="grid4">
-			<a href="#" class="boton sprite">
+			<a href="#" class="boton sprite home">
+				Boton Sprite
+			</a>
+			<a href="#" class="boton sprite calabazas">
 				Boton Sprite
 			</a>
 		</div>
