--- a/dia1.html
+++ b/dia1.html
@@ -67,10 +67,10 @@
 
 	<ol>
 		<li>Primer elemento de la lista</li>
-		<li>Primer elemento de la lista</li>
-		<li>Primer elemento de la lista</li>
-		<li>Primer elemento de la lista</li>
-		<li>Primer elemento de la lista</li>
+		<li>Segundo elemento de la lista</li>
+		<li>Tercero elemento de la lista</li>
+		<li>Cuarto elemento de la lista</li>
+		<li>Quinto elemento de la lista</li>
 	</ol>
 	
 	<dl>
