Nombres y cedulas en la tabla para diferenciar
Cambio del textos en la tabla para diferenciar cada una de las celdas

--- a/dia1.html
+++ b/dia1.html
@@ -11,11 +11,11 @@
 <body>
 
 	<h1>Titulo principal h1</h1>
-	<h2>Titulo completo con el multi selector H1</h2>
-	<h3>Titulo completo con el multi selector H1</h3>
-	<h4>Titulo completo con el multi selector H1</h4>
-	<h5>Titulo completo con el multi selector H1</h5>
-	<h6>Titulo completo con el multi selector H1</h6>
+	<h2>Titulo completo con el multi selector H2</h2>
+	<h3>Titulo completo con el multi selector H3</h3>
+	<h4>Titulo completo con el multi selector H4</h4>
+	<h5>Titulo completo con el multi selector H5</h5>
+	<h6>Titulo completo con el multi selector H6</h6>
 	<p>
 		Lorem <b>ipsum</b>
 		dolor sit amet, <i>consectetur</i>
@@ -48,19 +48,19 @@
 				<td>89789987</td>
 			</tr>
 			<tr>
-				<td>Sergio</td>
-				<td>Marin</td>
-				<td>89789987</td>
+				<td>Luis</td>
+				<td>Bello</td>
+				<td>10010597</td>
 			</tr>
 			<tr>
-				<td>Sergio</td>
-				<td>Marin</td>
-				<td>89789987</td>
+				<td>Gabriela</td>
+				<td>Guilarte</td>
+				<td>14568002</td>
 			</tr>
 			<tr>
-				<td>Sergio</td>
-				<td>Marin</td>
-				<td>89789987</td>
+				<td>Martín</td>
+				<td>Gonzalez</td>
+				<td>24587998</td>
 			</tr>
 		</tbody>
 	</table>
