--- a/dia1.html
+++ b/dia1.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>Dia 1 Curso Diseno Web Senior Sabatino</title>
+	<title>Dia 1 Curso Diseño Web Senior Sabatino</title>
 
 	<!--[if IE]>
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -11,11 +11,11 @@
 <body>
 
 	<h1>Titulo principal h1</h1>
-	<h2>Titulo completo con el multi selector H2</h2>
-	<h3>Titulo completo con el multi selector H3</h3>
-	<h4>Titulo completo con el multi selector H4</h4>
-	<h5>Titulo completo con el multi selector H5</h5>
-	<h6>Titulo completo con el multi selector H6</h6>
+	<h2>Titulo completo con el multi selector h2</h2>
+	<h3>Titulo completo con el multi selector h3</h3>
+	<h4>Titulo completo con el multi selector h4</h4>
+	<h5>Titulo completo con el multi selector h5</h5>
+	<h6>Titulo completo con el multi selector h6</h6>
 	<p>
 		Lorem <b>ipsum</b>
 		dolor sit amet, <i>consectetur</i>
@@ -31,7 +31,7 @@
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 	</p>
 
-	<a href="http://www.facebook.com" title="Esto es el Titulo">Este es el texto del enlace</a>
+	<a href="http://www.escuelaweb.net/" title="Esto es el Titulo">Este es el texto del enlace</a>
 
 	<table>
 		<thead>
