Agregado Ejemplo de Lista no numerada
Ejemplo de lista no numerada

--- a/dia1.html
+++ b/dia1.html
@@ -72,6 +72,15 @@
 		<li>Cuarto elemento de la lista</li>
 		<li>Quinto elemento de la lista</li>
 	</ol>
+
+	<ul>
+		<li>Primer elemento de la lista no numerada</li>
+		<li>Segundo elemento de la lista no numerada</li>
+		<li>Tercero elemento de la lista no numerada</li>
+		<li>Cuarto elemento de la lista no numerada</li>
+		<li>Quinto elemento de la lista no numerada</li>
+	</ul>
+
 	
 	<dl>
 		<dt>Titulo del articulo</dt>
