Agregada Lista de definiciones
Se agrogó una lista de definiciones

--- a/dia1.html
+++ b/dia1.html
@@ -32,7 +32,7 @@
 	</p>
 
 	<a href="http://www.escuelaweb.net/" title="Esto es el Titulo">Este es el texto del enlace</a>
-
+	<br><br>
 	<table>
 		<thead>
 			<tr>
@@ -80,7 +80,17 @@
 		<li>Cuarto elemento de la lista no numerada</li>
 		<li>Quinto elemento de la lista no numerada</li>
 	</ul>
+	<dl>
+		<dt>Primer Título de Listas de Definiciones</dt>
+		<dd>Pimera definición</dd>
+		<dt>Segundo Título de Listas de Definiciones</dt>
+		<dd>Segunda definición</dd>
+		<dt>Tercer Título de Listas de Definiciones</dt>
+		<dd>Tercera definición</dd>
+		<dt>Cuarto Título de Listas de Definiciones</dt>
+		<dd>Cuarta definición</dd>
 
+	</dl>
 	
 	<dl>
 		<dt>Titulo del articulo</dt>
